Added sidebar to hold all the lessons

--- a/index.html
+++ b/index.html
@@ -13,19 +13,29 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="text-center">
-                <h1>Ninja Cuts</h1>
+    <div class="container-fluid">
+        <div class="row-fluid">
+            <div class="span2">
+                <div id="wrapper">  
+                  <!-- Sidebar -->
+                  <div id="sidebar-wrapper">
+                    <ul class="sidebar-nav">
+                      <li class="sidebar-brand"><a href="#">Ninja Cuts!</a></li>
+                      <li><a href="#">Test</a></li>
+                    </ul>
+                  </div>
+                </div>
+            <div class="span10">
+                <div class="text-center">
 
-                <br />
-                <br />
+                    <br />
+                    <br />
 
-                <form>
-                    <label id="lesson-explanation"> What it does </label> <br />
-                    <input class="span2" id="lesson-box" placeholder="" >
-                </form>
-                    
+                    <form>
+                        <label id="lesson-explanation"> What it does </label> <br />
+                        <input class="span2" id="lesson-box" placeholder="" >
+                    </form>
+                </div>
             </div>
         </div>
     </div>
